--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
     </head>
     <body>
         <canvas id="canvas" height="600" width="1000"></canvas>
+        <div id="menu">
+            <input type="image" class="button" name="play" src="./Images/startgame.png" alt="play" onclick="newGame()">
+        </div>
+        <div id="gameOver">
+        </div>
+        <div id = "gameComplete">
+        </div>
+        <script src="./JavaScript/Game.js"></script>
+        <script src="./JavaScript/imageLoader.js"></script>
         <script src="./JavaScript/listener.js"></script>
         <script src="./JavaScript/helper.js"></script>
         <script src="./JavaScript/Characters.js"></script>
-        <script src="./JavaScript/GameTheme.js"></script>
         <script src="./JavaScript/declarations.js"></script>
         <script src="./JavaScript/Animation.js"></script>
     </body>
