--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
         <div id="menu">
             <input type="image" class="button" name="play" src="./Images/startgame.png" alt="play" onclick="newGame()">
         </div>
+        <div id = "loading"> Loading </div>
         <div id="gameOver">
         </div>
         <div id = "gameComplete">
         </div>
-        <script src="./JavaScript/Game.js"></script>
         <script src="./JavaScript/imageLoader.js"></script>
+        <script src="./JavaScript/audioLoader.js"></script>
+        <script src="./JavaScript/Game.js"></script>
         <script src="./JavaScript/listener.js"></script>
         <script src="./JavaScript/helper.js"></script>
         <script src="./JavaScript/Characters.js"></script>
