added loading screen

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div id="menu">
             <input type="image" class="button" name="play" src="./Images/startgame.png" alt="play" onclick="newGame()">
         </div>
-        <div id = "loading"> Loading </div>
+        <div id = "loading"> Loading... </div>
         <div id="gameOver">
         </div>
         <div id = "gameComplete">
