--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div id = "gameComplete">
         </div>
-        <div id="info">Use  Arrow Keys to Move player, space key to jump and P to pause</div>
+        <div id="info">Use  Arrow Keys to Move player, space key to shoot and P to pause</div>
         <script src="./JavaScript/imageLoader.js"></script>
         <script src="./JavaScript/audioLoader.js"></script>
         <script src="./JavaScript/Game.js"></script>
