--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div id = "gameComplete">
         </div>
         <div id="info">Use  Arrow Keys to Move player, space key to shoot and P to pause</div>
+        <script src="https://www.gstatic.com/firebasejs/6.4.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
         <script src="./JavaScript/imageLoader.js"></script>
         <script src="./JavaScript/audioLoader.js"></script>
         <script src="./JavaScript/Game.js"></script>
