--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
         <script src="./JavaScript/imageLoader.js"></script>
         <script src="./JavaScript/audioLoader.js"></script>
+        <script src="./JavaScript/levels.js"></script>
         <script src="./JavaScript/Game.js"></script>
         <script src="./JavaScript/listener.js"></script>
         <script src="./JavaScript/helper.js"></script>
